# nomade

./: .editorconfig  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  lefthook.yml
.github/: dependabot.yml
.github/workflows/: flutter.yml  rust.yml
apps/nomade_app/: .metadata  README.md  analysis_options.yaml  pubspec.yaml
apps/nomade_app/android/app/: build.gradle.kts
apps/nomade_app/android/app/src/main/: AndroidManifest.xml
apps/nomade_app/android/app/src/main/kotlin/com/example/nomade_app/: MainActivity.kt
apps/nomade_app/ios/Runner/: Info.plist
apps/nomade_app/ios/Runner.xcodeproj/: project.pbxproj
apps/nomade_app/lib/: main.dart
apps/nomade_app/lib/screens/: chat_screen.dart  home_screen.dart
apps/nomade_app/lib/services/: core_service.dart
apps/nomade_app/linux/: CMakeLists.txt
apps/nomade_app/linux/runner/: my_application.cc
apps/nomade_app/macos/Runner.xcodeproj/: project.pbxproj
apps/nomade_app/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
apps/nomade_app/macos/Runner/Configs/: AppInfo.xcconfig
apps/nomade_app/test/: widget_test.dart
apps/nomade_app/web/: index.html  manifest.json
apps/nomade_app/windows/: CMakeLists.txt
apps/nomade_app/windows/runner/: Runner.rc  main.cpp
core/nomade_core_rs/: Cargo.toml  README.md
core/nomade_core_rs/nomade_core/: Cargo.toml  build.rs
core/nomade_core_rs/nomade_core/src/: api.rs  artifacts.rs  bridge.rs  crypto.rs  device.rs  error.rs  frb_generated.rs  identity.rs  lib.rs  networking.rs  pairing.rs  protocol.rs  sync.rs
core/nomade_core_rs/nomade_crypto/: Cargo.toml
core/nomade_core_rs/nomade_crypto/src/: encryption.rs  identity.rs  lib.rs  qr_payload.rs
core/nomade_core_rs/nomade_events/: Cargo.toml
core/nomade_core_rs/nomade_events/src/: lib.rs
core/nomade_core_rs/nomade_quic/: Cargo.toml
core/nomade_core_rs/nomade_quic/src/: lib.rs
core/nomade_core_rs/nomade_storage/: Cargo.toml
core/nomade_core_rs/nomade_storage/src/: lib.rs
docs/: architecture.md  artifacts.md  data-model.md  pairing.md  rag-pipeline.md  rag.md  sync-protocol.md  threat-model.md  tooling.md
