[workspace]
members = ["nomade_core"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Nomade Studio"]
license = "MIT"
repository = "https://github.com/nomade-studio/nomade"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# QUIC
quinn = "0.11"
rustls = "0.23"

# Cryptography
ed25519-dalek = "2.1"
blake3 = "1.5"
sha2 = "0.10"
chacha20poly1305 = "0.10"
getrandom = "0.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
uuid = { version = "1.10", features = ["v4", "serde"] }
bytes = "1.7"
futures = "0.3"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"

# FFI (uncomment when setting up flutter_rust_bridge)
# flutter_rust_bridge = "2.0"
