[package]
name = "nomade_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
tokio.workspace = true
quinn.workspace = true
rustls.workspace = true
ed25519-dalek.workspace = true
blake3.workspace = true
sha2.workspace = true
chacha20poly1305.workspace = true
getrandom.workspace = true
serde.workspace = true
serde_json.workspace = true
rmp-serde.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
bytes.workspace = true
futures.workspace = true
base64.workspace = true
chrono.workspace = true
rand.workspace = true

[dev-dependencies]
tokio-test = "0.4"
