[package]
name = "nomade_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Internal crates
nomade_crypto = { path = "../nomade_crypto" }
nomade_quic = { path = "../nomade_quic" }
nomade_storage = { path = "../nomade_storage" }
nomade_events = { path = "../nomade_events" }

# Async runtime
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Other
bytes.workspace = true

