[package]
name = "nomade_quic"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Internal
nomade_crypto = { path = "../nomade_crypto" }

# Async runtime
tokio.workspace = true

# QUIC
quinn.workspace = true
rustls.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true

# Other
bytes.workspace = true

